--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 .holder {
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(2, 1fr);
-  width: 200px;
-  height: 200px;
- 
+  grid-template-rows: repeat(2, 100px);
+  grid-template-columns: repeat(2, 100px);
+  
+}
+.holder ,.item{
+	width: 200px;
 }
